--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "mcp-server-rust"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "mcp-server-rust"
+path = "src/main.rs"
+
+[lib]
+name = "mcp_server_rust"
+path = "src/lib.rs"
+
 [dependencies]
 anyhow = "1.0.100"
 log = "0.4.29"
@@ -12,3 +20,6 @@ thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full"] }
 tracing = "0.1"
 clap = { version = "4.0", features = ["derive"] }
+
+[dev-dependencies]
+tokio-test = "0.4"
